# fair-enough

./: .env  .env.sample  .gitignore  .gitlab-ci.yml  CNAME  Dockerfile  README.md  asset-manifest.json  context.jsonld  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  index.html  init_metrics_tests.sh  precache-manifest.02d20cb0cf3e30e203ae6ee0bd6ecc18.js  precache-manifest.3626596d68817a04aa082c6e0c03cb99.js  precache-manifest.3b4145f759c7d32bf4715dbf7d0b6c72.js  precache-manifest.51b0d4b6690ad7bc879ddda06d4686db.js  precache-manifest.5513b9e299063ce29ddc78b8812b107b.js  precache-manifest.5a3a8e99a3f1463434e66e4969096d7d.js  precache-manifest.6c6df24052fef6e511c2e090d663c5bd.js  precache-manifest.70a5a0966b17883704d1307ef38222bf.js  precache-manifest.8d7a38a5719889e74b3b197a5497e35d.js  precache-manifest.a415dcd3fb8c5d2b11d2360c32064596.js  precache-manifest.d7013d368a275a13e25d7f3e3dfc606c.js  precache-manifest.e25fe6e522c9296dd9113c596755016e.js  precache-manifest.eaf460fe5bfdcc932c28217a96966ef2.js  precache-manifest.f29b48a4a581824776bf3d90fccd8bd6.js  reset_local_db.sh  restart_deployment.sh  service-worker.js
backend/: .gitignore  Dockerfile  backend.dockerfile  celeryworker.dockerfile  prestart.sh  pyproject.toml  tests-start.sh  worker-start.sh
backend/app/: config.py  db.py  graphql.py  initial_data.py  main.py  utils.py  worker.py
backend/scripts/: test.sh
backend/static/: asset-manifest.json  index.html  manifest.json  precache-manifest.2d91f84e3d16fa8179b17dd5057de862.js  service-worker.js
(+182 files in other folders)
